# reflection

./: .hlint.yaml  .travis.yml  CHANGELOG.markdown  Data-Reflection.html  LICENSE  README  README.markdown  cabal.haskell-ci  cabal.project  doc-index.html  index-frames.html  index.html  mini_Data-Reflection.html  reflection.cabal  reflection.haddock
.github/workflows/: haskell-ci.yml
Data/: Reflection.hs
Data/Reflection/: Internal.hs
examples/: Astronomy.hs  Benchmark.hs  Constraints.hs  FromJSON.hs  Monoid.hs  ReaderLike.hs  TaggedMod.hs  reflection-examples.cabal
fast/Data/: Reflection.hs
fast/Data/Reflection/: Tagged.hs
slow/Data/: Reflection.hs
src/: Data-Reflection.html
tests/: ReifyNatSpec.hs  T47Spec.hs
