name:           reflection-examples
version:        0.1
license:        BSD3
license-file:   LICENSE
author:         Edward A. Kmett, Elliott Hird, Oleg Kiselyov and Chung-chieh Shan
maintainer:     Edward A. Kmett <ekmett@gmail.com>
stability:      experimental
homepage:       http://github.com/ekmett/reflection
bug-reports:    http://github.com/ekmett/reflection/issues
category:       Data, Reflection, Dependent Types
synopsis:       Examples of reflection
description:    Examples of reflection.
copyright:      2009-2013 Edward A. Kmett,
                2012 Elliott Hird,
                2004 Oleg Kiselyov and Chung-chieh Shan
build-type:     Simple
cabal-version:  >= 1.10
tested-with:   GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.7
             , GHC == 9.0.2
             , GHC == 9.2.8
             , GHC == 9.4.5
             , GHC == 9.6.2

flag examples
  default: True

library
  if !flag(examples)
    buildable:         False
  exposed-modules:     Constraints
                       Monoid
  build-depends:       base >= 4.9 && < 5,
                       constraints,
                       newtype-generics >= 0.5.3,
                       reflection,
                       semigroups,
                       tagged
  hs-source-dirs:      .
  ghc-options:         -Wall
  if impl(ghc >= 8.6)
    ghc-options:       -Wno-star-is-type
  default-language:    Haskell2010

executable reflection-from-json
  if !flag(examples)
    buildable:         False
  main-is:             FromJSON.hs
  build-depends:
                       -- TODO: Eventually, we should bump the lower version
                       -- bounds to >=2 so that we can remove some CPP in FromJSON.
                       aeson >= 1 && < 2.3,
                       base >= 4.9 && < 5,
                       microlens,
                       microlens-aeson,
                       reflection,
                       semigroups,
                       tagged,
                       text
  hs-source-dirs:      .
  ghc-options:         -Wall -threaded -rtsopts
  default-language:    Haskell2010

executable reflection-reader-like
  if !flag(examples)
    buildable:         False
  main-is:             ReaderLike.hs
  build-depends:       base >= 4.9 && < 5,
                       reflection,
                       tagged
  hs-source-dirs:      .
  ghc-options:         -Wall -threaded -rtsopts
  if impl(ghc >= 8.6)
    ghc-options:       -Wno-star-is-type
  default-language:    Haskell2010

